{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 19,
  "lineage": "03a554d0-9713-4f10-b3b2-78d452b1e759",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "nginx_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/regions/us-central1/instanceGroups/nginx-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-12-01T21:05:53.310-08:00",
            "enable_cdn": false,
            "fingerprint": "hAOLxxnk234=",
            "generated_id": -1216098978,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/global/healthChecks/nginx-healthcheck"
            ],
            "id": "projects/glass-ally-479415-q8/global/backendServices/nginx-backend-service",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "nginx-backend-service",
            "port_name": "http",
            "project": "glass-ally-479415-q8",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/global/backendServices/nginx-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_health_check.nginx_healthcheck",
            "google_compute_instance_template.nginx_template",
            "google_compute_region_instance_group_manager.nginx_mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-01T21:05:23.805-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/glass-ally-479415-q8/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/global/networks/default",
            "priority": 1000,
            "project": "glass-ally-479415-q8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/glass-ally-479415-q8/global/forwardingRules/nginx-http-forwarder",
            "ip_address": "34.160.6.206",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "nginx-http-forwarder",
            "port_range": "80-80",
            "project": "glass-ally-479415-q8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/global/forwardingRules/nginx-http-forwarder",
            "target": "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/global/targetHttpProxies/nginx-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.nginx_backend",
            "google_compute_health_check.nginx_healthcheck",
            "google_compute_instance_template.nginx_template",
            "google_compute_region_instance_group_manager.nginx_mig",
            "google_compute_target_http_proxy.nginx_http_proxy",
            "google_compute_url_map.nginx_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "nginx_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-01T21:07:00.311-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/glass-ally-479415-q8/global/targetHttpProxies/nginx-http-proxy",
            "name": "nginx-http-proxy",
            "project": "glass-ally-479415-q8",
            "proxy_bind": false,
            "proxy_id": -1216099045,
            "self_link": "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/global/targetHttpProxies/nginx-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/global/urlMaps/nginx-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.nginx_backend",
            "google_compute_health_check.nginx_healthcheck",
            "google_compute_instance_template.nginx_template",
            "google_compute_region_instance_group_manager.nginx_mig",
            "google_compute_url_map.nginx_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "nginx_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-01T21:06:48.029-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/global/backendServices/nginx-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "21vywLUQFn8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/glass-ally-479415-q8/global/urlMaps/nginx-url-map",
            "map_id": -1216099064,
            "name": "nginx-url-map",
            "path_matcher": [],
            "project": "glass-ally-479415-q8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/glass-ally-479415-q8/global/urlMaps/nginx-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.nginx_backend",
            "google_compute_health_check.nginx_healthcheck",
            "google_compute_instance_template.nginx_template",
            "google_compute_region_instance_group_manager.nginx_mig"
          ]
        }
      ]
    }
  ]
}